[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-progress-map"
version = "0.1.2"
description = "Parallel map with a built-in terminal progress bar"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["parallel", "map", "progress", "multiprocessing", "threading", "concurrent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-progress-map"
Repository = "https://github.com/philiprehberger/py-progress-map"
Issues = "https://github.com/philiprehberger/py-progress-map/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_progress_map"]
